--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            
+            <img id="timg" src="./assets/card1.jpeg" class="img-thumbnail" alt="hi">
+            <h2 id="feature" >Manage your library in few steps</h2>
             <img id="cimg" src="./assets/courosel1.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
+            <img id="timg" src="./assets/card2.jpeg" class="img-thumbnail" alt="hi">
+            <h2 id="feature" >Lending and borrowing made simple</h2>
             <img id="cimg" src="./assets/courosel2.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
