--- a/index.html
+++ b/index.html
@@ -65,14 +65,16 @@
             <img id="cimg" src="./assets/courosel2.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img id="cimg" src="..." class="d-block w-100" alt="...">
+            <img id="timg" src="./assets/card3.jpeg" class="img-thumbnail" alt="hi">
+            <h2 id="feature" >Browse and search books</h2>
+            <img id="cimg" src="./assets/courosal3.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <button id="courosalbtn" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <button id="courosalbtn" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
