--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li>
             </ul>
-        <button class="loginbtn" type="submit">Sign-in/log-in</button>  
+        <button class="loginbtn" type="submit" onclick="redirect()">Sign-in/log-in</button>  
         </div>
         </div>
       </nav> 
-        <img id="bgimg" src="./assets/bg1.png" alt="..."></img>
+        <img id="bgimg" src="./assets/bg1.png" alt="...">
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -79,7 +79,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+      <script src="index.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       </body>
 </html>
