--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <img id="modal_img2" src="./assets/card5.jpeg" alt="" href="#" />
               <h2 style="padding-left: 30px">
                 Librarian
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;User
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;User
               </h2>
             </div>
             <div class="modal-footer">
