--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Setuplib</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -42,29 +43,21 @@
             <li class="nav-item">
               <a class="nav-link" href="#features">Services</a>
             </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="#contributors">Contributors</a>
+            </li>
+              
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
           </ul>
+          <button id="loginbtn1" type="button" class="btn btn-light">
+            Sign-up
+          </button>
+          <button id="loginbtn" type="button" class="btn btn-success">
+            Log-in
+          </button>
         </div>
       </div>
     </nav>
@@ -104,17 +97,13 @@
               ></button>
             </div>
             <div class="modal-body">
-              <div class="librarian" style="padding-right: 5%;">
               <img id="modal_img1" src="./assets/card1.jpeg" alt="" href="#" />
-              <h2>
+              <img id="modal_img2" src="./assets/card5.jpeg" alt="" href="#" />
+              <h2 style="padding-left: 30px">
                 Librarian
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;User
               </h2>
             </div>
-            <div class="user">  
-            <img id="modal_img2" src="./assets/card5.jpeg" alt="" href="#" />
-              
-              <h2 style="padding-left:20% ;">User</h2>
-            </div></div>
             <div class="modal-footer">
               <button
                 type="button"
@@ -128,7 +117,7 @@
         </div>
       </div>
 
-      <button id="lgbtn" onclick="redirect()" type="button" class="btn btn-success">Log-in</button>
+      <button id="lgbtn" type="button" class="btn btn-success">Log-in</button>
     </div>
 
     <!-- courosal -->
@@ -232,6 +221,33 @@
       </div>
     </div>
 
+    <!-- cards -->
+
+    <div class="contributors" id="contributors">
+      <h1 style="text-align: center;font-weight: 800;padding:10%;font-size:xxx-large">Contributors</h1>
+      <div class="row row-cols-1 row-cols-md-2 g-5">
+        <div class="col">
+          <div class="card">
+            <img id="dp" src="./assets/Prof.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Prathamesh khile</h5>
+              <p class="card-text">B.tech IT Engineer at UDICT, MGM University Sambhajinagar.</p>
+              <i style="font-size: xx-large;padding-right: 7%;" class="fa-brands fa-linkedin"></i><i style="font-size: xx-large;" class="fa-brands fa-github"></i>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img id="dp" src="./assets/Prof2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Achintya Choudhary</h5>
+              <p class="card-text">B.tech IT Engineer at UDICT, MGM University Sambhajinagar.</p>
+              <i style="font-size: xx-large; padding-right: 7%" class="fa-brands fa-linkedin"></i><i style="font-size: xx-large;" class="fa-brands fa-github"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
