--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img id="dp" src="./assets/Prof2.jpg" class="card-img-top" alt="...">
+            <img id="dp" src="./assets/prof2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Achintya Choudhary</h5>
               <p class="card-text">B.tech IT Engineer at UDICT, MGM University Sambhajinagar.</p>
