--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
       </div>
 
-      <button id="lgbtn" type="button" class="btn btn-success">Log-in</button>
+      <button id="lgbtn" type="button" class="btn btn-success" onclick="loginRedirect()">Log-in</button>
     </div>
 
     <!-- courosal -->
