--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
           <div class="card">
             <img id="dp" src="./assets/Prof.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Prathamesh khile</h5>
-              <p class="card-text">B.tech IT Engineer at UDICT, MGM University Sambhajinagar.</p>
+              <h5 class="card-title">Prathamesh Khile</h5>
+              <p class="card-text">B.TECH IT Engineer at UDICT, MGM University Sambhajinagar.</p>
               <i style="font-size: xx-large;padding-right: 7%;" class="fa-brands fa-linkedin"></i><i style="font-size: xx-large;" class="fa-brands fa-github"></i>
             </div>
           </div>
@@ -230,8 +230,8 @@
           <div class="card">
             <img id="dp" src="./assets/prof2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Achintya Choudhary</h5>
-              <p class="card-text">B.tech IT Engineer at UDICT, MGM University Sambhajinagar.</p>
+              <h5 class="card-title">Achintya Choudhari</h5>
+              <p class="card-text">B.TECH IT Engineer at UDICT, MGM University Sambhajinagar.</p>
               <i style="font-size: xx-large; padding-right: 7%" class="fa-brands fa-linkedin"></i><i style="font-size: xx-large;" class="fa-brands fa-github"></i>
             </div>
           </div>
