--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               ></button>
             </div>
             <div class="modal-body">
-              <img id="modal_img1" src="./assets/card1.jpeg" alt="" href="#" />
+              <img id="modal_img1" src="./assets/card1.jpeg" alt=""  onclick="siginredirect()" />
               <img id="modal_img2" src="./assets/card5.jpeg" alt="" href="#" />
               <h2 style="padding-left: 30px">
                 Librarian
