--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Setuplib</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./public/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
-          ><img id="logo" src="./assets/logo091.png"
+          ><img id="logo" src="./public/logo091.png"
         /></a>
         <button
           class="navbar-toggler"
@@ -52,7 +52,7 @@
       </div>
     </nav>
     <div class="bg" id="home">
-      <img id="bgimg" src="./assets/bg1.png" alt="..." />
+      <img id="bgimg" src="./public/bg1.png" alt="..." />
       <!-- Button trigger modal -->
       <!-- Button trigger modal -->
       <button
@@ -87,8 +87,8 @@
               ></button>
             </div>
             <div class="modal-body">
-              <img id="modal_img1" src="./assets/card1.jpeg" alt=""  onclick="siginredirect()" />
-              <img id="modal_img2" src="./assets/card5.jpeg" alt="" href="#" />
+              <img id="modal_img1" src="./public/card1.jpeg" alt=""  onclick="siginredirect()" />
+              <img id="modal_img2" src="./public/card5.jpeg" alt="" href="#" />
               <h2 style="padding-left: 30px">
                 Librarian
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;User
@@ -145,14 +145,14 @@
           <div class="carousel-item active">
             <img
               id="timg"
-              src="./assets/card1.jpeg"
+              src="./public/card1.jpeg"
               class="img-thumbnail"
               alt="hi"
             />
             <h2 id="feature">Manage your library in few steps</h2>
             <img
               id="cimg"
-              src="./assets/courosel1.jpeg"
+              src="./public/courosel1.jpeg"
               class="d-block w-100"
               alt="..."
             />
@@ -160,14 +160,14 @@
           <div class="carousel-item">
             <img
               id="timg"
-              src="./assets/card2.jpeg"
+              src="./public/card2.jpeg"
               class="img-thumbnail"
               alt="hi"
             />
             <h2 id="feature">Lending and borrowing made simple</h2>
             <img
               id="cimg"
-              src="./assets/courosel2.jpeg"
+              src="./public/courosel2.jpeg"
               class="d-block w-100"
               alt="..."
             />
@@ -175,14 +175,14 @@
           <div class="carousel-item">
             <img
               id="timg"
-              src="./assets/card3.jpeg"
+              src="./public/card3.jpeg"
               class="img-thumbnail"
               alt="hi"
             />
             <h2 id="feature">Browse and search books</h2>
             <img
               id="cimg"
-              src="./assets/courosal3.jpeg"
+              src="./public/courosal3.jpeg"
               class="d-block w-100"
               alt="..."
             />
@@ -218,7 +218,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-5">
         <div class="col">
           <div class="card">
-            <img id="dp" src="./assets/Prof.jpg" class="card-img-top" alt="...">
+            <img id="dp" src="./public/Prof.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Prathamesh Khile</h5>
               <p class="card-text">B.TECH IT Engineer at UDICT, MGM University Sambhajinagar.</p>
@@ -228,7 +228,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img id="dp" src="./assets/prof2.jpg" class="card-img-top" alt="...">
+            <img id="dp" src="./public/prof2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Achintya Choudhari</h5>
               <p class="card-text">B.TECH IT Engineer at UDICT, MGM University Sambhajinagar.</p>
@@ -238,7 +238,7 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./public/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
